# fantastic_relay

./: .gitignore  CITATION.cff  CONTRACT.md  NOTICE  README.md  typos.toml
.github/workflows/: conformance.yml  gitleaks.yml  lint.yml  release.yml  rust.yml  spellcheck.yml  swift.yml
apple/: .gitignore  .swift-format  Makefile  README.md  project.yml
apple/FantasticRelay/: FantasticRelay.entitlements  Info.plist
apple/FantasticRelay/App/: AppDelegate.swift  RelayApp.swift
apple/FantasticRelay/Core/: CloudflaredTunnel.swift  IssuerKeyStore.swift  KeychainStore.swift  RelayController.swift  RelaySettings.swift  UIMeter.swift
apple/FantasticRelay/Views/: DashboardView.swift  GlassCompat.swift  GlassWindowBackground.swift  MenuBarContent.swift
apple/fantastic.icon/: icon.json
apple/scripts/: ExportOptions-Pro.plist  build-pro.sh  setup-notarize.sh
conformance/: Cargo.toml  README.md
conformance/src/: main.rs
docs/: RUNNING.md
examples/cloudflared/: config.yml
relaykernel/: Package.resolved  Package.swift
relaykernel/Sources/RelayKernel/: PeerInfo.swift  PeerProxyBundle.swift  RelayAuth.swift  RelayConfig.swift  RelayEngine.swift  RelayInbound.swift  RelayPeers.swift  RelayRouterBundle.swift
relaykernel/Sources/relay-supervisor/: main.swift
relaykernel/Sources/relayd/: main.swift
relaykernel/Tests/RelayKernelTests/: IsolationTests.swift  RelayInboundTests.swift  RelayKernelTests.swift  TestSupport.swift
relaykernel/container/: Containerfile  build.sh  entrypoint.sh
relaykernel/integration_tests/: README.md  conftest.py  pyproject.toml  test_isolation.py  test_streaming.py  test_tunnel.py
relaykernel/integration_tests/helpers/: launcher.py  ws.py
router/: Cargo.toml
router/src/: error.rs  forward.rs  meter.rs  rendezvous.rs  ws.rs
rust/: Cargo.toml  README.md
rust/src/: auth.rs  config.rs  forward.rs  issuer.rs  lib.rs  main.rs  meter.rs  rendezvous.rs  ws.rs
rust/tests/: issue_verify.rs  relay_e2e.rs  relay_pairing.rs
swift/: Package.resolved  Package.swift  README.md
swift/Sources/RelayCore/: Auth.swift  Base64URL.swift  Claims.swift  Config.swift  Forward.swift  Issuer.swift  IssuerServer.swift  Meter.swift  RelayError.swift  Rendezvous.swift  Server.swift
swift/Sources/relayd/: main.swift
(+7 files in other folders)
