[package]
name = "fantastic-router"
version = "0.0.1"
edition = "2021"
description = "Fantastic Relay data-plane router — dumb, zero-trust opaque-frame forwarder."
license = "AGPL-3.0-or-later"
publish = false

[[bin]]
name = "fantastic-router"
path = "src/main.rs"

[[bin]]
name = "relay-probe"
path = "src/bin/relay-probe.rs"

[[bin]]
name = "fantastic-issue"
path = "src/bin/fantastic-issue.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# LOAD-BEARING PIN: tungstenite 0.24 changes Message::Text(String)/Binary(Vec<u8>)
# to Utf8Bytes/Bytes, which silently breaks every match arm + byte counting in
# forward.rs and the `#[from] tungstenite::Error` in error.rs. Do NOT bump without
# porting those. See README.md.
tokio-tungstenite = ">=0.23, <0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
base64 = "0.22"
dashmap = "6"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
getrandom = "0.2"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hex = "0.4"
